# rezn-ai

./: .dockerignore  .env  .env.example  .env.local.example  .gitignore  .vercelignore  CLEAN_ROOM.md  Dockerfile  LICENSE  PROVENANCE.md  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.json
app/: globals.css  layout.tsx  page.tsx
deploy/: railway.env.example  vercel.env.example
docs/: AGENT_MEMORY_PLAN.md  API_CONTRACT.md  BUILD_LOG.md  DEMO.md  DEPLOY.md  EXECUTION_BRIEF.md  HANDOFF.md  MASTERPLAN.md  PRIOR_WORK.md  SPONSOR_INTEGRATIONS.md  SUBMISSION_CHECKLIST.md  TEAM_RUNBOOK.md  WEAVE_FIRST.md  allowed-tools.md  architecture.md  demo-script.md  design-thinking.md  organizer-brief.md  plan.md  sponsor-architecture.md  team-build-plan.md  weave-trace-hygiene.md  workflow.md
scripts/: agent_memory_doctor.py  check.sh  cleanup_demo.py  dev.sh  export_openapi.py  redis_doctor.py  self_improvement_runthrough.py  weave_doctor.py
tests/: conftest.py  test_agent_memory_optional.py  test_api.py  test_async_generation.py  test_audio_metrics.py  test_batches_api.py  test_brief_parser.py  test_cleanup.py  test_composition.py  test_conductor_agents.py  test_conductor_api.py  test_config.py  test_deep_mode.py  test_downloads.py  test_ensemble_events.py  test_ensemble_roster.py  test_genre_styles.py  test_golden_render.py  test_harness.py  test_hermetic_env.py  test_language_boundary.py  test_lead_melody.py  test_llm_agents.py  test_memory_hygiene.py  test_midi.py  test_orchestrator.py  test_project.py  (+24 more)
(+105 files in other folders)
