[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rezn-ai"
version = "0.1.0"
description = "Clean-room multi-agent music lab with Weave traces, Redis memory, and CopilotKit HITL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jin Choi" }]
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "redis>=6.0.0",
  "uvicorn>=0.30.0",
  "weave>=0.52.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rezn-ai = "rezn_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
